# NTU-

Camp Management System/: README.md
Heart Disease Prediction/: README.md
Heart Disease Prediction/Model/: undersampled.h5
Heart Disease Prediction/Scaler/: oversampled_Scaler.pkl  undersampled_Scaler.pkl
Little Timmy - Autonomous Robot (STM32 Integration)/Algorithm code/: app.txt  settings.txt  test_rpi.txt
Little Timmy - Autonomous Robot (STM32 Integration)/ImgRec/: datasetGet.txt  model.txt  test.txt
Little Timmy - Autonomous Robot (STM32 Integration)/RPI/: STMConnectionA1_Checklist.txt  Stm32.txt
Little Timmy - Autonomous Robot (STM32 Integration)/STM code/Task 1_Core/: README.md
SC1015 - Intro to Data Science & Artificial Intelligence/Mini Project - Heart Disease Prediction/: Heart Disease Prediction.ipynb  Heart disease prediction.pptx
SC2079_Multidisciplinary Design Project/: README.md
SC2079_Multidisciplinary Design Project/Algorithm code/: README.mp  main.txt
SC2079_Multidisciplinary Design Project/Documents/: MDP assessment and system checklist.docx
SC2079_Multidisciplinary Design Project/ImgRec/: README.mp  main.txt
SC2079_Multidisciplinary Design Project/RPI/: README.md  Task1.txt  Task2.txt  android.txt  settings.txt
SC4022-Network-Science/: .gitignore  README.md  pyproject.toml
SC4022-Network-Science/inputs/: DataScientists.xls
SC4022-Network-Science/src/sc4022/: __main__.py
SC4022-Network-Science/src/sc4022/dataset/: __init__.py  clustering.py  collaboration.py  data_scientist.py
SC4022-Network-Science/src/sc4022/utils/: __init__.py  file_utils.py  graph_utils.py
SC4022-Network-Science/test/: __init__.py  run_suite.py  test_file_utils.py  utils.py
(+48 files in other folders)
